# ha-coap-server

./: .gitignore  README.md
.west/: config
application/: .uhu  CMakeLists.txt  CMakePresets.json  hacoap.overlay  overlay-logging.conf  overlay-mtd.conf  overlay-udp.conf  overlay-usb.conf  prj.conf  west.yml
application/boards/: hacoap.overlay  uart.overlay  usb.overlay
application/boards/arm/hacoap/: Kconfig.board  Kconfig.defconfig  board.cmake  hacoap-pinctrl.dtsi  hacoap.dts  hacoap.yaml  hacoap_defconfig
application/boards/arm/hacoap/doc/: index.rst
application/include/: coap_server.h  ot_coap_utils.h  ot_srp_config.h
application/scripts/: generate_version.cmake
application/src/: coap_server.c  ot_coap_utils.c
firmware-updater/: README.md  app.py  requirements.txt  update_manager.py
firmware-updater/static/css/: styles.css
firmware-updater/static/js/: main.js  updates.js
firmware-updater/templates/: base.html  devices.html  index.html  update.html
scripts/: get-image-hash.sh  install-dependencies.sh  mcumgr-dfu.sh  mcumgr-update-all.sh  ota-update.sh
